Fix points text alignment

--- a/packages/cd-components/src/atoms/points/points.module.scss
+++ b/packages/cd-components/src/atoms/points/points.module.scss
@@ -9,8 +9,7 @@
 .points {
   color: rgba(0, 0, 0, 0.6);
   font-size: 0.7rem;
-  width: 55%;
-  margin-left: 1.5rem;
+  width: 65%;
   padding: 0.25rem 0;
 }
 
